[gd_scene load_steps=18 format=3 uid="uid://c6ovpkyegha2i"]

[ext_resource type="Texture2D" uid="uid://dkj6s6022obi0" path="res://Art/UI/hotbar.png" id="1_fdtle"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/main_ui.gd" id="1_jlsw2"]
[ext_resource type="Texture2D" uid="uid://btb3lsxgf8w05" path="res://Art/UI/menu tabs.png" id="2_vd1n6"]
[ext_resource type="PackedScene" uid="uid://dutjtyluty2rm" path="res://Scenes/ui & inventory/item_slot.tscn" id="4_3q8l1"]
[ext_resource type="Texture2D" uid="uid://tytlnjvhxca5" path="res://Art/UI/menu tab icons.png" id="5_ie0lv"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/inventory_display.gd" id="10_0lx4k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jfvni"]
atlas = ExtResource("2_vd1n6")
region = Rect2(0, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fubql"]
texture = SubResource("AtlasTexture_jfvni")
texture_margin_top = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_bgeqn"]
atlas = ExtResource("2_vd1n6")
region = Rect2(21, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p24fo"]
texture = SubResource("AtlasTexture_bgeqn")
texture_margin_top = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_u3uf8"]
atlas = ExtResource("2_vd1n6")
region = Rect2(42, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tjcc8"]
texture = SubResource("AtlasTexture_u3uf8")
texture_margin_top = 3.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_gkhxy"]
atlas = ExtResource("5_ie0lv")
region = Rect2(0, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6yat"]
atlas = ExtResource("5_ie0lv")
region = Rect2(21, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_si0uh"]
atlas = ExtResource("5_ie0lv")
region = Rect2(42, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshix"]
atlas = ExtResource("5_ie0lv")
region = Rect2(63, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq32r"]
atlas = ExtResource("1_fdtle")
region = Rect2(0, 0, 222, 32)

[node name="MainUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jlsw2")

[node name="TabBar" type="TabBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -55.0
offset_right = -16.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_fubql")
theme_override_styles/tab_hovered = SubResource("StyleBoxTexture_p24fo")
theme_override_styles/tab_unselected = SubResource("StyleBoxTexture_tjcc8")
clip_tabs = false
scroll_to_selected = false
tab_count = 4
tab_0/title = ""
tab_0/icon = SubResource("AtlasTexture_gkhxy")
tab_1/title = ""
tab_1/icon = SubResource("AtlasTexture_a6yat")
tab_2/title = ""
tab_2/icon = SubResource("AtlasTexture_si0uh")
tab_3/title = ""
tab_3/icon = SubResource("AtlasTexture_fshix")

[node name="InventoryTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -32.0
offset_right = 111.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
texture = SubResource("AtlasTexture_rq32r")

[node name="InventoryDisplay" type="VBoxContainer" parent="InventoryTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 210.0
offset_bottom = 74.0
theme_override_constants/separation = 5
script = ExtResource("10_0lx4k")

[node name="HotbarSlots" type="HBoxContainer" parent="InventoryTexture/InventoryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="ItemSlot0" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot1" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot2" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot3" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot4" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot5" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot6" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot7" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot8" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="OtherSlots" type="GridContainer" parent="InventoryTexture/InventoryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 9

[node name="ItemSlot0" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot1" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot2" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot3" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot4" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot5" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot6" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot7" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot8" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot9" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot10" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot11" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot12" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot13" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot14" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot15" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot16" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="ItemSlot17" parent="InventoryTexture/InventoryDisplay/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_changed"]
